RESOLVED FIXED300495
GCGLErrorCode flags value 2 is unused
https://bugs.webkit.org/show_bug.cgi?id=300495
Summary GCGLErrorCode flags value 2 is unused
Kimmo Kinnunen
Reported 2025-10-10 01:13:00 PDT
GCGLErrorCode flags value 2 is unused
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-10 01:13:07 PDT
Kimmo Kinnunen
Comment 2 2025-10-10 01:15:04 PDT
EWS
Comment 3 2025-10-10 03:41:25 PDT
Committed 301311@main (7bc69ce3ea26): <https://commits.webkit.org/301311@main> Reviewed commits have been landed. Closing PR #52108 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.