GCGLErrorCode flags value 2 is unused https://bugs.webkit.org/show_bug.cgi?id=300495 rdar://162351187

Reviewed by Dan Glastonbury.

Make the GCGLErrorCode values tightly packed by using the value 2 and
adjusting subsequent values.

* Source/WebCore/platform/graphics/GraphicsTypesGL.h:

Canonical link: https://commits.webkit.org/301311@main