Source/WebCore/platform/graphics/GraphicsTypesGL.h
@@ -82,10 +82,10 @@ using GCGLMTLRasterizationRateMapANGLE = void*;
 // Order in inverse of in GL specification, so that iteration is in GL specification order.
 enum class GCGLErrorCode : uint8_t {
     ContextLost = 1,
-    InvalidFramebufferOperation = 1 << 2,
-    OutOfMemory = 1 << 3,
-    InvalidOperation = 1 << 4,
-    InvalidValue = 1 << 5,
-    InvalidEnum = 1 << 6
+    InvalidFramebufferOperation = 1 << 1,
+    OutOfMemory = 1 << 2,
+    InvalidOperation = 1 << 3,
+    InvalidValue = 1 << 4,
+    InvalidEnum = 1 << 5
 };
 using GCGLErrorCodeSet = OptionSet<GCGLErrorCode>;
